# Orbiting-Galaxy-Example

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
scripts/: gen_memory_layout_gif.py  requirements.txt  visualize.py
src/baseline/: baseline.cpp  particle.hpp  simulation.hpp  visualization.hpp
src/optimized/: optimized.cpp  particle.hpp  scopedTimer.hpp  simulation.cpp  simulation.hpp  visualization.hpp
src/users_solution/: main.cpp  particle.hpp  scopedTimer.hpp  simulation.cpp
test/: CMakeLists.txt  users_solution_tests.cpp
